styles.css
body {
	font-family: Helvetica, sans-serif
}

#lottoNumbers {
	max-width: 470px;
	margin-left: auto;
	margin-right: auto;
}

#lottoNumbers button {
	margin-top: 15px;
	width: 100%;
	font-size: 40px;
}

#lottoNumberList li {
	width: 50px;
	height: 50px;
	font-size: 30px;
	text-align: center;
	list-style-type: none;
	float: left;
	margin-left: 15px;
	padding-top: 5px;
	background-image: url(lotto_ball.png);
	background-repeat: no-repeat;
	background-size: 100%;
}

